--- a/app/code/Morke/CrazyForm/view/frontend/templates/home_form.phtml
+++ b/app/code/Morke/CrazyForm/view/frontend/templates/home_form.phtml
@@ -4,7 +4,7 @@ var_dump($this->jsLayout = isset($data['jsLayout']) && is_array($data['jsLayout'
 
 
 
-<div id="CrazyForm" data-bind="scope:'CrazyForm'">
+<div id="CrazyForm" data-bind="scope:'CrazyForm'" data-mage-init='{"validation":{"rules": {"text_field": {"required":true}}}}'>
     <!-- ko template: getTemplate() --><!-- /ko -->
 
 </div>
@@ -13,7 +13,10 @@ var_dump($this->jsLayout = isset($data['jsLayout']) && is_array($data['jsLayout'
     {
         "#CrazyForm": {
             "Magento_Ui/js/core/app": <?= /* @noEscape */ $block->getJsLayout() ?>
+
         }
     }
 </script>
+
+
 
