--- a/app/code/Morke/CrazyForm/view/frontend/web/template/CrazyFormTemplate.html
+++ b/app/code/Morke/CrazyForm/view/frontend/web/template/CrazyFormTemplate.html
@@ -13,12 +13,7 @@
     <button type="reset">
         <span data-bind="i18n: 'Reset'"></span>
     </button>
-    <button type="button" data-bind="click: onSubmit" class="action">
+    <button type="button"  class="action">
         <span data-bind="i18n: 'Submit'"></span>
     </button>
 </form>
-<script type="text/javascript">
-    var viewModel = {
-        optionsValue: ko.observableArray(['France', 'Germany', 'Spain'])
-    };
-</script>
